--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </p>
         <h1>&copy; LAC Divertimentos</h1>
     </div>
-    <img src="http://contador.kinghost.com.br/contador.cgi?ft=1|df=avellac.github.io/snake/"/>
+    <img src="http://contador.kinghost.com.br/contador.cgi?ft=1|df=https://avellac.github.io/snake/"/>
     <script src="script.js"></script>
     <script type="text/javascript" src="buttons.js"></script>
     <script src="joystick.js"></script>
