--- a/index.html
+++ b/index.html
@@ -23,7 +23,15 @@
         </p>
         <h1>&copy; LAC Divertimentos</h1>
     </div>
-    <img src="http://contador.kinghost.com.br/contador.cgi?ft=1|df=https://avellac.github.io/snake/"/>
+    <!-- Inicia codigo Contador -->
+<div>
+    <a title='Contador de Visitas do MegaContador' href='https://megacontador.com.br/' >
+    <img src='https://megacontador.com.br/img-m1AQg1Hou9ltmSZR-50.gif'  
+          alt='Contador de visitas'>
+    </a>
+</div>
+<!-- Fim do codigo Contador -->
+
     <script src="script.js"></script>
     <script type="text/javascript" src="buttons.js"></script>
     <script src="joystick.js"></script>
