--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <!-- Inicia codigo Contador -->
 <div>
     <a title='Contador de Visitas do MegaContador' href='https://megacontador.com.br/' >
-        <img src='https://megacontador.com.br/img-wmvRIFjquZLSVS1l-61.gif' alt='Contador de visitas'>
+        <img text-align="center" src='https://megacontador.com.br/img-wmvRIFjquZLSVS1l-61.gif' alt='Contador de visitas'>
     </a>
 </div>
 <!-- Fim do codigo Contador -->
