--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
         <h1>&copy; LAC Divertimentos</h1>
     </div>
     <!-- Inicia codigo Contador -->
-<div>
+<div class="imagem">
     <a title='Contador de Visitas do MegaContador' href='https://megacontador.com.br/' >
-        <img text-align="center" src='https://megacontador.com.br/img-wmvRIFjquZLSVS1l-61.gif' alt='Contador de visitas'>
+        <img src='https://megacontador.com.br/img-wmvRIFjquZLSVS1l-61.gif' alt='Contador de visitas'>
     </a>
 </div>
 <!-- Fim do codigo Contador -->
